Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating.tex
@@ -594,6 +594,11 @@ To evaluate when we can reject a given admixture durations (including a one gene
 
 We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals, including the 107 unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only consider biallelic sites, and determine the ancestral allele using  the Chimpanzee reference genome (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
 
+\subsection{Online Resources}\label{Online Resources}
+
+The Simulation script and analysis pipeline can be found
+
+
 \section{Acknowledgments}
 
 We thank Svante P\"a\"abo, Janet Kelso, Fabrizio Mafessoni, St\'{e}phane Peyr\'{e}gne, Laurits Skov, Divyaratan Popli, Alba Bossom Mesa and Arev S\"umer for helpful comments and discussions.
