Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating.tex
@@ -1,4 +1,4 @@
-\documentclass[]{article}
+\documentclass[11pt]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
@@ -84,10 +84,10 @@
 }
 %%% END HELPER CODE
 
-\myexternaldocument{Supplements}
+\myexternaldocument{Paper/Supplements}
 
 \usepackage{setspace}
-\doublespacing
+\onehalfspacing
 \usepackage[none]{hyphenat}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -594,17 +594,19 @@ To evaluate when we can reject a given admixture durations (including a one gene
 
 We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals, including the 107 unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only consider biallelic sites, and determine the ancestral allele using  the Chimpanzee reference genome (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
 
-\subsection{Online Resources}\label{Online Resources}
-
-The Simulation script and analysis pipeline can be found
-
 
 \section{Acknowledgments}
 
 We thank Svante P\"a\"abo, Janet Kelso, Fabrizio Mafessoni, St\'{e}phane Peyr\'{e}gne, Laurits Skov, Divyaratan Popli, Alba Bossom Mesa and Arev S\"umer for helpful comments and discussions.
 This work was supported by the Max Planck Society and the European Research Council (grant number: 694707) to Svante P\"a\"abo.
 
+\section{Data Availability}\label{Data Availability}
 
+The simulation script and analysis pipeline containing the \emph{Extended Admixture Pulse} model is  available  on  GitHub: \url{https://github.com/LeonardoIasi/Extended_Admixture_Pulse}. No new data were generated for this study.
+
+\section{Competing interests}
+
+The authors declare that they have no competing interests.
 
 \hypertarget{refs}{}
 
