--- a/Paper/Supplements.tex
+++ b/Paper/Supplements.tex
@@ -69,6 +69,8 @@
 
 \usepackage{setspace}
 \onehalfspacing
+\usepackage[left]{lineno}
+\linenumbers
 \usepackage[none]{hyphenat}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -166,7 +168,7 @@ since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
 
 \begin{table}[H]
 
-\caption{\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
+\caption{\label{tab:tableS1} Mean, standard deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
 \centering
 \begin{tabular}{l|r|r|r|r|r|r}
 \hline
